--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -6,15 +6,14 @@
     "tagline": "Solving the Double Declaration problem in GraphQL",
     "babel-plugin-blade": "As a babel plugin",
     "blade-macro": "As a babel macro",
-    "doc3": "This is document number 3",
     "declarationdeclaration": "The Double Declaration Problem",
-    "doc4": "Other Document",
-    "doc5": "Fifth Document",
     "graphql-spec": "GraphQL Spec By Example",
     "index": "What is Babel-Blade?",
     "Docs": "Docs",
     "API": "API",
     "Help": "Help",
+    "GitHub": "GitHub",
+    "Roadmap": "Roadmap",
     "Blog": "Blog",
     "Introduction": "Introduction",
     "Getting Started": "Getting Started",
