--- a/talks/graphql-nyc/deck.mdx
+++ b/talks/graphql-nyc/deck.mdx
@@ -19,6 +19,13 @@ by [@swyx](https://twitter.com/swyx)
 
 ---
 
+## Netlify. It's good for you!
+
+### JAMstack_conf
+<https://jamstackconf.com>
+
+---
+
 ## Double Declaration
 
 - Demo <https://codesandbox.io/s/7y04wj2lz1>
@@ -105,7 +112,9 @@ import ShadesOfPurple from "prism-react-renderer/themes/shadesOfPurple"
   lang="javascript"
   showNumbers={false}
   dark={true}
-  steps={[]}
+  steps={[
+    { lines: [12, 15] }
+  ]}
 />
 
 ---
