added docs for the array methods

--- a/talks/react-boston/deck.mdx
+++ b/talks/react-boston/deck.mdx
@@ -214,7 +214,8 @@ Do everything [the GraphQL spec](https://graphql.github.io/learn/queries/) can d
 
 ## Thank you!
 
-- **Request for Tests**: <https://babel-blade.netlify.com/>
+- **Request for Tests**
+  - <https://babel-blade.netlify.com/>
 - Slides: <https://swyx.io/ReactBoston>
 - Twitter: [@swyx](https://twitter.com/swyx)
 
